--- a/.github/workflows/hldsp.yml
+++ b/.github/workflows/hldsp.yml
@@ -1,43 +1,36 @@
-name: 哈喽短视频
+name: hldsp
+
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '20 1,7,12 * * *'
+     - cron: '*/20 1-13 * * *'
   watch:
     types: started
-  repository_dispatch:
-    types: hlpsp
 jobs:
   build:
-
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
+    env:
+        HLDSP_URL: ${{ secrets.HLDSP_URL }}
+        HLDSP_HD: ${{ secrets.HLDSP_HD }}       
+        TZ: Asia/shanghai
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-       
-      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/checkout@v1
+        
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方缓存 Action。
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ secrets.KEY }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
+          node-version: 12.x
       - name: npm install
         run: |
           npm install
-      - name: '运行 【哈喽短视频】'
+      - name: '运行 【hldsp】'
+        if: env.HLDSP_HD
         run: |
           node Task/hldsp.js
         env:
-          
-          HLDSPURL: ${{ secrets.HLDSPURL }}
-          HLDSPHD: ${{ secrets.HLDSPHD }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
@@ -45,4 +38,3 @@ jobs:
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
