--- a/.github/workflows/hldsp.yml
+++ b/.github/workflows/hldsp.yml
@@ -1,38 +1,43 @@
-name: 哈啰
+name: hldsp@Feizao
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '5 0-15 * * *'
+    - cron: '20 5,18 * * *'
+  # 本地时间+8
+  watch:
+    types: started
   repository_dispatch:
-      types: hello
+    types: hldsp
 jobs:
   build:
+
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        HLDSP_URL: ${{ secrets.HLDSP_URL }}
-        HLDSP_HD: ${{ secrets.HLDSP_HD }}  
-        TZ: Asia/shanghai
     steps:
       - name: Checkout
-        run: |
-          git clone https://github.com/baodandan2020/copyfor302.git ~/copyfor302
-      - name: Use Node.js 14.x
+        uses: actions/checkout@v2
+       
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: ${{ matrix.node-version }}
+      - name: Cache node_modules
+        uses: actions/cache@v2 # 使用 GitHub 官方缓存 Action。
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
       - name: npm install
         run: |
-          cd ~/copyfor302
           npm install
-          npm install cron
-          npm install request
-      - name: '运行 【1】'
+      - name: '运行 【哈喽短视频】'
         run: |
-          cd ~/copyfor302   
           node Task/hldsp.js
         env:
+          HLDSPURL: ${{ secrets.HLDSPURL }}
+          HLDSPHD: ${{ secrets.HLDSPHD }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
