--- a/.github/workflows/hldsp.yml
+++ b/.github/workflows/hldsp.yml
@@ -1,48 +1,40 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different @versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-#github-actions
-
 name: 哈喽短视频
+
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 * * * *' # UTC时间 +8 北京
+     - cron: '23 1 * * *'
   watch:
-    types: started
-  repository_dispatch:
     types: started
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
+    env:
+        HLDSPURL: ${{ secrets.HLDSPURL }}
+        HLDSPHD: ${{ secrets.HLDSPHD }}       
+        TZ: Asia/shanghai
     steps:
       - name: Checkout
-        run: |
-          git clone https://github.com/baodandan2020/copyfor302.git ~/copyfor302
-      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/checkout@v1
+        
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Cache node_modules
-        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
-        env:
-          cache-name: cache-node-modules
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
+          node-version: 12.x
       - name: npm install
         run: |
-          cd ~/copyfor302
-          git checkout age174--
           npm install
       - name: '运行 【哈喽短视频】'
+        if: env.HLDSP_HD
         run: |
-          cd ~/copyfor302
-          node hldsp.js
+          node Task/hldsp.js
         env:
-          TZ: Asia/shanghai
-          HLDSPURL: ${{ secrets.HLDSPURL }}
-          HLDSPHD: ${{ secrets.HLDSPHD }}
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
