--- a/.github/workflows/hldsp.yml
+++ b/.github/workflows/hldsp.yml
@@ -19,17 +19,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v1
         
-      - name: Use Node.js 14.x
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: 12.x
       - name: npm install
         run: |
           npm install
       - name: '运行 【哈喽短视频】'
         if: env.HLDSP_HD
         run: |
-          node Task/hldsp.js
+          node hldsp.js
         env:
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
