--- a/.github/workflows/hldsp.yml
+++ b/.github/workflows/hldsp.yml
@@ -1,36 +1,46 @@
-name: 哈喽短视频
+# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
+name: 哈喽短视频
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '23 1 * * *'
+    - cron: '23 1 * * *'
   watch:
     types: started
+  repository_dispatch:
+    types: hldsp
 jobs:
   build:
+
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
-    env:
-        HLDSPURL: ${{ secrets.HLDSPURL }}
-        HLDSPHD: ${{ secrets.HLDSPHD }}       
-        TZ: Asia/shanghai
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
-        
-      - name: Use Node.js 12.x
+        uses: actions/checkout@v2
+        with:
+          repository: age174--
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: ${{ matrix.node-version }}
+      - name: Cache node_modules
+        uses: actions/cache@v2 # 使用 GitHub 官方缓存 Action。
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
       - name: npm install
         run: |
           npm install
       - name: '运行 【哈喽短视频】'
-        if: env.HLDSPHD
         run: |
           node hldsp.js
         env:
+          HLDSPURL: ${{ secrets.HLDSPURL }}
+          HLDSPHD: ${{ secrets.HLDSPHD }}
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
@@ -38,3 +48,4 @@ jobs:
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+          IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
