--- a/.github/workflows/hldsp.yml
+++ b/.github/workflows/hldsp.yml
@@ -1,106 +1,40 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-
-
-
-name: 哈喽
-
-
+name: 哈啰短视频
 
 
 on:
-
   workflow_dispatch:
-
   schedule:
-
-    - cron: '20 5,12 * * *'
-
-  # watch:
-
-  #       types: started
-
-  # repository_dispatch:
-
-  #   types: jd_cash
-
+     - cron: '23 3 * * *'
+  watch:
+    types: started
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     if: github.event.repository.owner.id == github.event.sender.id
-
     env:
-
-      URL: "https://raw.githubusercontent.com/ziye66666/JavaScript/main/Task/QQread.js"
-
-      RUNFILE: "Task/QQread.js"      
-
-      HLDSPURL: ${{ secrets.HLDSPURL }}
-
-      HLDSPHD: ${{ secrets.HLDSPHD }}
-
-      PUSH_KEY: ${{ secrets.PUSH_KEY }}
-
-      BARK_PUSH: ${{ secrets.BARK_PUSH }}
-
-      BARK_SOUND: ${{ secrets.BARK_SOUND }}
-
-      TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-
-      TG_USER_ID: ${{ secrets.TG_USER_ID }}
-
-      DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
-
-      DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
-
-      IGOT_PUSH_KEY: ${{ secrets.IGOT_PUSH_KEY }}
-
+        HLDSPURL: ${{ secrets.HLDSPURL }}
+        HLDSPHD: ${{ secrets.HLDSPHD }}       
+        TZ: Asia/shanghai
     steps:
-
       - name: Checkout
-
-        uses: actions/checkout@v2
-
-        #with:
-
-        #  repository: Sunert/Scripts
-
-      - name: Use Node.js ${{ matrix.node-version }}
-
+        uses: actions/checkout@v1
+        
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
-
         with:
-
-          node-version: ${{ matrix.node-version }}
-
-      - name: Cache node_modules
-
-        uses: actions/cache@v2 # 使用 GitHub 官方的缓存 Action。
-
-        env:
-
-          cache-name: cache-node-modules
-
-        with:
-
-          path: node_modules
-
-          key: ${{ runner.os }}-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }} # 使用 package-lock.json 的 Hash 作为缓存的 key。也可以使用 package.json 代替
-
+          node-version: 12.x
       - name: npm install
-
-        #if: env.RLHEADER
-
         run: |
           npm install
-      - name: '运行 【哈喽】'
-
-        #if: env.RLHEADER
-
+      - name: '运行 【hldsp】'
+        if: env.HLDSP_HD
         run: |
           node Task/hldsp.js
+        env:
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
+          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+          TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
