--- a/.github/workflows/hldsp.yml
+++ b/.github/workflows/hldsp.yml
@@ -29,7 +29,7 @@ jobs:
       - name: '运行 【hldsp】'
         if: env.HLDSP_HD
         run: |
-          node Task/hldsp.js
+          node hldsp.js
         env:
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
