--- a/.github/workflows/hldsp.yml
+++ b/.github/workflows/hldsp.yml
@@ -1,4 +1,4 @@
-name: 哈啰短视频
+name: hldsp
 
 
 on:
@@ -29,7 +29,7 @@ jobs:
       - name: '运行 【hldsp】'
         if: env.HLDSP_HD
         run: |
-          node hldsp.js
+          node Task/hldsp.js
         env:
           PUSH_KEY: ${{ secrets.PUSH_KEY }}
           BARK_PUSH: ${{ secrets.BARK_PUSH }}
