--- a/.github/workflows/iboxpay.yml
+++ b/.github/workflows/iboxpay.yml
@@ -1,12 +1,9 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: 笑谱
 
 on:
   workflow_dispatch:
   schedule:
-     - cron: '0,30 0-15,22,23 * * *'
+     - cron: '*/60 0-15 * * *'
   watch:
     types: started
 jobs:
@@ -14,12 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
-        
-        XP_refreshTOKEN: ${{ secrets.XP_refreshTOKEN }}
+        XP_refreshTOKEN: ${{ secrets.XP_refreshTOKEN }}      		
         XP_CASH: ${{ secrets.XP_CASH }}
         XP_live: ${{ secrets.XP_live }}
-        #XP_iboxpayvideoHEADER: ${{ secrets.XP_iboxpayvideoHEADER }}
-        #XP_iboxpayvideoBODY: ${{ secrets.XP_iboxpayvideoBODY }}
+        
     steps:
       - name: Checkout
         run: |
@@ -28,13 +23,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - name: npm instal
-      
+      - name: npm install
+        if: env.XP_refreshTOKEN
         run: |
           cd ~/copyfor302
+          git checkout ZIYE
           npm install
       - name: '运行 【笑谱】'
-        
+        if: env.XP_refreshTOKEN
         run: |
           cd ~/copyfor302
           node Task/iboxpay.js
@@ -47,3 +43,4 @@ jobs:
           BARK_SOUND: ${{ secrets.BARK_SOUND }}
           DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
           DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
+© 2021 GitHub, Inc.
