--- a/.github/workflows/hldsp.yml
+++ b/.github/workflows/hldsp.yml
@@ -1,37 +1,40 @@
-name: 哈啰
+name: 哈喽短视频
+
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '5 0-15 * * *'
-  repository_dispatch:
-      types: hello
+     - cron: '23 1-13 * * *'
+  watch:
+    types: started
 jobs:
   build:
     runs-on: ubuntu-latest
     if: github.event.repository.owner.id == github.event.sender.id
     env:
         HLDSP_URL: ${{ secrets.HLDSP_URL }}
-        HLDSP_HD: ${{ secrets.HLDSP_HD }}  
+        HLDSP_HD: ${{ secrets.HLDSP_HD }}       
         TZ: Asia/shanghai
     steps:
       - name: Checkout
-        run: |
-          git clone https://github.com/lh44575858/....git ~/...
-      - name: Use Node.js 14.x
+        uses: actions/checkout@v1
+        
+      - name: Use Node.js 12.x
         uses: actions/setup-node@v1
         with:
-          node-version: 14.x
+          node-version: 12.x
       - name: npm install
         run: |
-          cd ~/...
           npm install
-          npm install cron
-          npm install request
-      - name: '运行 【1】'
+      - name: '运行 【哈喽短视频】'
+        if: env.HLDSP_HD
         run: |
-          cd ~/...   
           node Task/hldsp.js
         env:
+          PUSH_KEY: ${{ secrets.PUSH_KEY }}
+          BARK_PUSH: ${{ secrets.BARK_PUSH }}
           TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
           TG_USER_ID: ${{ secrets.TG_USER_ID }}
+          BARK_SOUND: ${{ secrets.BARK_SOUND }}
+          DD_BOT_TOKEN: ${{ secrets.DD_BOT_TOKEN }}
+          DD_BOT_SECRET: ${{ secrets.DD_BOT_SECRET }}
